# master-thesis

./: .gitignore  .gitignore~  .gitmodules  .travis.yml  CMakeLists.txt  README.md
html/: index.html
mtx/: 2048.mtx  512.mtx  diag_100000x100000_0.1.mm  diag_10000x10000.mtx  diag_10000x10000.rhs  diag_50k.mtx  diag_50k.rhs  e30r0100_rhs1.mtx  fidap005_rhs1.mtx  sherman1_rhs1.mtx
software/: CMakeLists.txt  FindOpenCL.cmake  FindSqlite3.cmake  config.sample.ini  fake_rhs.rb~
software/locust/: .gitignore  Gemfile  Rakefile  environment.rb  locust.rb  result.txt  twokernels.cl
software/locust/.bundle/: config
software/locust/config/: database.yml  locust.yml
software/locust/db/: development.sqlite3
software/locust/db/migrate/: 001_create_tasks.rb  002_add_fields_to_tasks.rb  003_add_remote_url_to_task.rb  004_add_part_size_to_task.rb  005_add_global_size_to_task.rb  006_add_part_num_to_task.rb  007_add_local_size_to_task.rb  kill_tasks.rb
software/locust/lib/backends/: backend_base.rb  fake_backend.rb  pjw_backend.rb
software/locust/lib/models/: task.rb
software/locust/storage/tasks/: 10.ret  12.ret  14.ret  15.ret  16.ret  5.ret  7.ret  8.ret  9.ret
software/reducer/: CMakeLists.txt  reducer.cpp
software/splitter/: CMakeLists.txt  CMakeLists.txt~  msvc.cmake  splitter.cmake  splitter.cmake~  splitter.cpp
software/src/: DatabaseAccessor.hpp  SQLiteDBScheme.hpp  SQLiteDatabaseAccessor.cpp  SQLiteDatabaseAccessor.hpp  ServerDatabaseAccessor.hpp  ServerSQLiteDBScheme.hpp  ServerSQLiteDatabaseAccessor.cpp  ServerSQLiteDatabaseAccessor.hpp  db_test.cpp  dbctl.cpp  dbscheme.hpp  globals.hpp  reference.s3db  reference.sdb  server.cpp  splitter.cpp  utilhead.cpp  utilhead.hpp
software/src/db/: DatabaseAccessor.hpp  SQLiteDatabaseAccessor.cpp  SQLiteDatabaseAccessor.hpp  ServerDatabaseAccessor.hpp  ServerSQLiteDatabaseAccessor.cpp  ServerSQLiteDatabaseAccessor.hpp
software/src/models/: Solution.cpp  Solution.hpp  Task.cpp  Task.hpp  Wave.cpp  Wave.hpp
software/src/net/: RequestManager.cpp  RequestManager.hpp
software/src/obsolete/: dbctl.cpp  globals.hpp
software/src/obsolete/models/: Solution.hpp  Task.cpp
software/src/obsolete/net/: RequestManager.hpp
software/swarmhost/: .gitignore  .jstags  Gemfile
software/swarmhost/app/assets/javascripts/admin/: application.js
software/swarmhost/app/assets/stylesheets/: nodes_controller.scss
software/swarmhost/app/assets/stylesheets/admin/: application.css  custom-styles.css
software/swarmhost/app/controllers/: application_controller.rb  nodes_controller.rb  tasks_controller.rb
software/swarmhost/app/controllers/admin/: application_controller.rb  nodes_controller.rb  solutions_controller.rb  tasks_controller.rb
software/swarmhost/app/controllers/concerns/: crud_controller.rb
software/swarmhost/app/helpers/: nodes_controller_helper.rb
software/swarmhost/app/jobs/: process_wave_job.rb
software/swarmhost/app/models/: node.rb  solution.rb  task.rb  wave.rb
software/swarmhost/app/uploaders/: metafile_uploader.rb
software/swarmhost/app/views/admin/nodes/: _form.html.erb  edit.html.erb  index.html.erb  new.html.erb  show.html.erb
software/swarmhost/app/views/admin/solutions/: _form.html.erb  edit.html.erb  index.html.erb  new.html.erb  show.html.erb
software/swarmhost/app/views/admin/tasks/: index.html.erb
software/swarmhost/app/views/layouts/: admin.html.erb  application.html.erb
software/swarmhost/app/views/nodes/: index.html.erb
software/swarmhost/config/: application.rb  routes.rb  secrets.yml
software/swarmhost/config/initializers/: devise.rb  mime_types.rb  renderers.rb  session_store.rb
software/swarmhost/config/locales/: en.yml  pl.yml
software/swarmhost/db/: schema.rb  seeds.rb
software/swarmhost/db/migrate/: 20150329173030_create_solutions.rb  20150329173121_create_waves.rb  20150329173205_create_tasks.rb  20150329173222_add_completed_to_tasks.rb  20150329173239_create_nodes.rb  20150329173531_remove_wave_from_solution.rb  20150329174423_add_active_at_to_node.rb  20150329182404_remove_type_from_task.rb  20150329182502_add_kind_to_task.rb  20150405151151_add_fields_to_solution.rb  20150406083201_add_fields_to_task.rb  20150406083214_add_metafile_to_solution.rb  20150406083800_add_dim_to_solution.rb  20150418125635_add_part_size_to_task.rb  20150418130628_add_full_size_to_solution.rb  20150418132820_add_global_size_to_tasks.rb  20150426104416_remove_tasks_from_waves.rb  20150426104425_add_tasks_number_to_waves.rb  20150502071901_add_reductions_to_wave.rb  20150504164518_add_started_to_solution.rb  20150610165940_add_local_size_to_solution.rb  20150610165948_add_local_size_to_task.rb  20150610171305_add_started_at_to_task.rb
software/swarmhost/test/controllers/: nodes_controller_controller_test.rb
software/swarmhost/test/fixtures/: solutions.yml  tasks.yml  waves.yml
software/swarmhost/test/jobs/: process_wave_job_test.rb
theory/: .~lock.elements.docx#  abstrakt_sesja_kol_2015.docx  elements.docx  lws.ods  temat.txt  woody.php.html  ~$ements.docx
theory/praca/: lws.aux  lws.ods  lws.tex  magisterka.aux  magisterka.tex  magisterka.toc  schematics.ods
theory/sesja-kol/: .~lock.badania.ods#  badania.ods  sesja-kol.aux  sesja-kol.nav  sesja-kol.tex  sesja-kol.toc  shownotes.md
theory/woody.php_files/: -
